fix: repair workflow runtime regressions